# service/api/getMyStream.go
@@ -1,9 +1,11 @@
 package api
 
 import (
+	"encoding/json"
 	"net/http"
 
 	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
+	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/database"
 	"github.com/julienschmidt/httprouter"
 )
 
@@ -18,6 +20,27 @@ func (rt *_router) getMyStream(w http.ResponseWriter, r *http.Request, ps httpro
 		return
 	}
 
-	//TODO implement method that returns a stream of pictures for the current user's feed
-	// get the user's followings, retrieve their posts, show to user
+	followings, err := rt.db.GetFollowing(userReq)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	var photos []database.Photo
+	for _, following := range followings {
+		followingPhotos, err := rt.db.GetPhotos(userReq, following)
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError)
+			return
+		}
+		for i, photo := range followingPhotos {
+			if i >= 5 {
+				break
+			}
+			photos = append(photos, photo)
+		}
+	}
+	w.WriteHeader(http.StatusOK)
+	w.Header().Set("Content-Type", "application/json")
+	_ = json.NewEncoder(w).Encode(photos)
 }
